--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">志報新聞社</string>
-    <string name="a">每期\n志報</string>
+    <string name="a">每期\n報章</string>
     <string name="b">訂閱\n會員</string>
     <string name="c">每日\n大小事</string>
     <string name="d">需要\n幫助?</string>
@@ -8,10 +8,10 @@
     <string name="f">讓你最快接收到志報,\n訂閱會員等一系列操作</string>
     <string name="g">&gt;立即進入</string>
     <string name="h">歡迎使用志報新聞社</string>
-    <string name="i">每期志報</string>
-    <string name="j">獲取每期的志報</string>
-    <string name="k">查看以往志報</string>
-    <string name="l">最新日報</string>
+    <string name="i">每期報章</string>
+    <string name="j">獲取每期的報章</string>
+    <string name="k">往期報章</string>
+    <string name="l">最新報章</string>
     <string name="m">知道世界每日發生的大小事</string>
     <string name="n">每日大小事</string>
     <string name="o">訂閱會員可以搶先獲得報道,\n同時觀看黑白版和彩色版報\n道,還有更多優惠。</string>
@@ -76,5 +76,8 @@
     <string name="ca">向客服查詢問題…或聊天🤔</string>
     <string name="bm">似乎正在加載信息或還沒有訊息…</string>
     <string name="bn">圖表</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="bo">資訊\n報商:%s\n版號:%s\n日期:%s</string>
+    <string name="bp">資訊\n報商:%s\n日期:%s</string>
+    <string name="bq">會員搶先看</string>
+    <string name="dow">下載完成!!!</string>
 </resources>
